resized images, changed dimensions of btn to fixed units, not %, to avoid size squishing and stretching

--- a/Desktop/2023workspace/JamBro/sass/styles.scss
+++ b/Desktop/2023workspace/JamBro/sass/styles.scss
@@ -27,13 +27,16 @@
         height: 100vh;
     }
 
+.btn_buffer{
 
+    width:10%;
+}
 
     #samemood {
         position: relative;
-        height: 17rem;
+        height: 10rem;
         left: 32%;
-        width: 36%;
+        width: 10rem;
         border-radius: 22%;
         -webkit-box-shadow: inset 2px 2px 33px 20px rgb(0 0 0 / 57%);
         box-shadow: inset 1px 7px 39px 44px rgb(0 0 0 / 60%);
@@ -60,7 +63,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        width: 51vw;
+        width: 70vw;
     }
 
     .pal_photo {
@@ -83,6 +86,7 @@
 
     .speech_bubble {
 
+        height: auto;
         font-family: sans-serif;
         line-height: 44px;
         text-align: center;
@@ -90,7 +94,8 @@
         padding-inline: 2px;
         background-color: rgba(64, 81, 83, 0.5);
         font-size: 1.5rem;
-       
+        position: absolute;
+        right: 0px;
         width: 48vw;
 
     }
